# spira-on-ch-graphs

./: .gitignore  CMakeLists.txt  LICENSE  Manual.tex  README.md  bibliography.bib  build.sh  from0.txt  main.tex  out  output.txt  run_on_server.sh
Algorithms/: dijkstra.cpp  dijkstra.hpp  new_variant.cpp  new_variant.hpp  spira.cpp  spira.hpp
CH/: .gitignore  README.md
CH/include/algorithms/: CH.hpp  ch_dijkstra.hpp  witness_dijkstra.hpp
CH/include/data_structures/: ch_graph.hpp  edge.hpp  graph.hpp  node.hpp
CH/include/io/: file_handler.hpp
CH/include/utils/: kahip_runner.hpp  utils.hpp
CH/output_files/1b/: osm1.csv  osm11.csv  osm5.csv  osm6.csv  osm8.csv  osm9.csv
CH/output_files/2c/: osm1.csv  osm2.csv  osm4.csv  osm5.csv  osm6.csv  osm8.csv
CH/output_files/dc/: osm10.csv
CH/src/: benchmarks.hpp  main.cpp
CH/src/algorithms/: dijkstra.cpp
CH/src/utils/: utils.cpp
CH/web-app/: package-lock.json
CH/web-app/public/: app.js  index.html  styles.css
Evaluations/: basic_test.cpp  benchmark_tests.cpp  benchmark_tests.hpp
Graph/: edge.hpp  graph.cpp  graph.hpp
Include/: sssp_result.hpp  types.hpp
Utils/: file_handler.cpp  file_handler.hpp
algorithms/pre-processing/: contraction-hierarchy.cpp  contraction-hierarchy.hpp  customizable-contraction-hierarchy.cpp  customizable-contraction-hierarchy.hpp  witness-dijkstra.cpp  witness-dijkstra.hpp
algorithms/shortest-path/: ch-dijkstra.cpp  ch-dijkstra.hpp  dijkstra.cpp  dijkstra.hpp  new-variant.cpp  new-variant.hpp  spira.cpp  spira.hpp
algorithms/shortest-path/bi-directional/: bi-directional-dijkstra.cpp  bi-directional-dijkstra.hpp  bi-directional-spira.cpp  bi-directional-spira.hpp
algorithms/shortest-path/with-elimination-tree/: bi-elitree-dijkstra.cpp  bi-elitree-dijkstra.hpp  bi-elitree-spira.cpp  bi-elitree-spira.hpp
algotemplate/: CD_2023.sty  format.sty  report.cls  thesis.cls
data-structures/: ch-graph.cpp  ch-graph.hpp  edge.hpp  elimination-tree.cpp  elimination-tree.hpp  graph.cpp  graph.hpp  node.hpp
evaluations/: basic_test.cpp  benchmark-elimination-tree.cpp  benchmark-elimination-tree.hpp  benchmark-tests.cpp  benchmark_tests.cpp  benchmark_tests.hpp
include/: enums.hpp  sssp-result.hpp  types.hpp
include/algorithms/: CCH.hpp  CH.hpp  ch_dijkstra.hpp  dijkstra.hpp
include/core/: types.hpp
include/data_structures/: cch_graph.hpp  ch_graph.hpp  edge.hpp  graph.hpp
include/io/: file_handler.hpp
include/utils/: kahip_runner.hpp  utils.hpp
ipe-presentation-template/: algoKN_dev.ipe  ipe_tutorial.ipe
kntemplate/: CD_2023.sty  CD_2023_colours.sty  format.sty  knnat.bst  report.cls  thesis.cls
my writing/ipe-presentation-template/: README.md  algoKN.ipe  algoKN.isy  unikn_colors.isy
my writing/tex-thesis-template/: main.tex
output/DenseNetworks/exponential_weights/spt_benchmark/: average.csv  ca4663.csv  dj38.csv  ei8246.csv  kz9976.csv  lu980.csv  mu1979.csv  nu3496.csv  qa194.csv  rw1621.csv  uy734.csv  wi29.csv  zi929.csv
output/DenseNetworks/exponential_weights/src_dst_benchmark/: average.csv  ca4663.csv  dj38.csv  kz9976.csv  lu980.csv  mu1979.csv  nu3496.csv  pm8079.csv  qa194.csv  rw1621.csv  uy734.csv  wi29.csv  ym7663.csv  zi929.csv
output/DenseNetworks/original_weights/spt_benchmark/: average.csv  ca4663.csv  dj38.csv  ei8246.csv  kz9976.csv  lu980.csv  mu1979.csv  nu3496.csv  qa194.csv  rw1621.csv  tz6117.csv  uy734.csv  wi29.csv  zi929.csv
output/DenseNetworks/original_weights/src_dst_benchmark/: average.csv  ca4663.csv  dj38.csv  kz9976.csv  lu980.csv  mu1979.csv  nu3496.csv  pm8079.csv  qa194.csv  rw1621.csv  uy734.csv  wi29.csv  zi929.csv
output/DenseNetworks/plots/: pertinent_share_dense.csv  pertinent_share_n_dense.csv
output/DenseNetworks/plots/python files/: in_out_pertinence.py  pops_vs_pertinent.py  pops_vs_pertinent_ratio.py
output/DenseNetworks/random_weights/spt_benchmark/: average.csv  ca4663.csv  (+13 more)
output/exp_complete/spt_benchmark/: average.csv  n100.csv  n1066.csv  n1388.csv  n1710.csv  n2032.csv  n2354.csv  n2676.csv  n2998.csv  n422.csv  n744.csv
output/exp_complete/src_dst_benchmark/: average.csv  n100.csv  n1066.csv  n1388.csv  n1710.csv  n2032.csv  n2354.csv  n2676.csv  n2998.csv  n422.csv  n744.csv
output/sparse_networks/plots/: nv_pops_to_pertinent_sparse.csv  pertinent_share_sparse.csv
output_files/: 1a.csv  2a.csv  2b.csv
output_files/1b/: osm10.csv  osm2.csv  osm3.csv  osm4.csv  osm7.csv
output_files/2c/: osm3.csv  osm7.csv  osm9.csv
output_files/dc/: osm11.csv
output_files/nested_dissections/: level2
scripts/: analyze_subgraph_density.py  plot_ch_vs_cch_edge_ratios.py  plot_ch_vs_cch_pertinence.py  plot_ch_vs_cch_pops.py  plot_ch_vs_cch_runtime.py  plot_runtime_heatmaps.py  plot_runtime_threshold_weight.py  plot_sparse_threshold_results.py  plot_subgraph_density.py
shortest-path-visualizer/: README.md  interactive_cli.hpp  visualizer.cpp  visualizer.hpp
shortest-path-visualizer/backend/: package.json  server.js
shortest-path-visualizer/frontend/: index.html
shortest-path-visualizer/frontend/src/: App.tsx  main.tsx
spira/: .gitignore  CMakeLists.txt  build.sh
spira/Algorithms/: new_variant.cpp  new_variant.hpp
spira/Evaluations/: benchmark_tests.cpp
spira/Graph/: node.hpp
spira/Include/: sssp_result.hpp
spira/Utils/: file_handler.cpp
spira/output/exp_complete_from_sparse/: pertinent_out_in_compare.py
spira/shortest-path-visualizer/: interactive_cli.cpp
spira/shortest-path-visualizer/frontend/: index.html
src/: benchmarks.cpp  benchmarks.hpp  interactive_cli.hpp  main.cpp  main_stub.cpp  webApp.hpp
src/algorithms/: CCH.cpp  CH.cpp  ch_dijkstra.cpp  dijkstra.cpp  witness_dijkstra.cpp
src/io/: file_handler.cpp
src/tools/: kahip_smoketest.cpp
src/utils/: helpers.cpp  kahip_runner.cpp  utils.cpp
tests/: test_graph.cpp
utils/: file-handler.cpp  file-handler.hpp  kahip-runner.cpp  kahip-runner.hpp  node-scheduler.cpp  node-scheduler.hpp  utilities.cpp  utilities.hpp
web-app/: package.json  server.js
web-app/public/: app.js  index.html
web_app/public/: index.html
(+277 files in other folders)
